docs(journal): log Spectrum model implementation and changelog update

--- a/docs/journal/2025-09-21.md
+++ b/docs/journal/2025-09-21.md
@@ -11,3 +11,6 @@ heredoc> ## Next
 heredoc> - Add Spectrum model code.
 heredoc> - Commit with `feat(spectra): add Spectrum model`.
 heredoc> - Expand with `SpectraPack.swift`.
+- 11:25 Implemented `Spectrum` model (Spectra/Model/Spectrum.swift). Codable/Sendable with clamped params and debug fixture.
+- 11:28 Committed accidentally in `chore(repo): initialise Xcode project, gitignore, and docs`.
+- 17:36 Updated CHANGELOG with Spectrum model details.
