docs(journal): update with SpectraPack feature, Spectrum fix and Xcode project changes

--- a/docs/journal/2025-09-21.md
+++ b/docs/journal/2025-09-21.md
@@ -11,6 +11,11 @@ heredoc> ## Next
 heredoc> - Add Spectrum model code.
 heredoc> - Commit with `feat(spectra): add Spectrum model`.
 heredoc> - Expand with `SpectraPack.swift`.
-- 11:25 Implemented `Spectrum` model (Spectra/Model/Spectrum.swift). Codable/Sendable with clamped params and debug fixture.
+- 11:25 Implemented `Spectrum` model (Spectra/Model/Spectrum.swift). Codable/Sendable with clamped params and debug fix$
 - 11:28 Committed accidentally in `chore(repo): initialise Xcode project, gitignore, and docs`.
 - 17:36 Updated CHANGELOG with Spectrum model details.
+- 18:48 Implemented `SpectraPack` model (Spectra/Model/SpectraPack.swift) with validation and ISO-8601 date handling.
+- 19:04 Fixed Spectrum DEBUG fixture to match current API (displayName/lutPath/defaultIntensity).
+- 19:09 Commit `fix(spectra): align Spectrum DEBUG sample with current API`.
+- 19:10 Commit `feat(spectra): add SpectraPack model`
+- 19:11 Commit `chore(xcode): update project to include Spectra models and correct grouping` 
